# axum-server-boilerplate

./: Cargo.toml  docker-compose.yml
rest/: Cargo.toml  Dockerfile
rest/src/: main.rs
ws/: Cargo.toml  Dockerfile
ws/src/: main.rs
