[package]
name = "axum-server-boilerplate"
version = "0.1.0"
authors = ["Karl Camota <krlptrck@proton.me>"]
edition = "2021"

[workspace]
members = ["rest", "ws"]

[dependencies]
axum = "0.6.9"
tokio = { version = "1.26.0", features = ["full"] }

[[bin]]
name = "rest"
path = "rest/src/main.rs"

[[bin]]
name = "ws"
path = "ws/src/main.rs"